force-app/main/default/objects/Porcentaje_autolote__mdt/Porcentaje_autolote__mdt.object-meta.xml
<CustomObject>
    <description>Metadata para alojar los porcentajes de ganancia utilizados en autolote</description>
    <label>Porcentaje autolote</label>
    <pluralLabel>Porcentajes autolote</pluralLabel>
</CustomObject>