force-app/main/default/objects/Porcentaje_autolote__mdt/fields/Posicion_respecto_al_tope__c.field-meta.xml
<CustomField>
    <fullName>Posicion_respecto_al_tope__c</fullName>
    <label>Posición respecto al tope</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Mayor</fullName>
                <default>true</default>
                <label>Mayor</label>
            </value>
            <value>
                <fullName>Menor</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>