force-app/main/default/objects/Porcentaje_autolote__mdt/fields/Tope__c.field-meta.xml
<CustomField>
    <fullName>Tope__c</fullName>
    <label>Tope</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>